# ThisTinti

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .professionalization-diagnostics.txt  .replit  .ux-guide-trigger  ARCHITECTURE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  Makefile  NOTICE  PRIVACY.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  SELF_REVIEW.md  SUPPORT.md  TERMS_OF_USE.md  TRADEMARKS.md  alpha6-normalization-diagnostics.txt  alpha6-test-diagnostics.txt  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  replit.md  requirements-build.txt  requirements-dev-linux.lock.txt  requirements-dev.txt  requirements-linux.lock.txt  requirements.txt  run_thistinti.py
.alpha6-transfer/: chunk-000.txt  hardening.patch
.github/: CODEOWNERS
.professionalization-transfer/: chunk-000.txt  chunk-001.txt  chunk-002.txt  chunk-003.txt  chunk-004a.txt  chunk-004b.txt  chunk-005.txt  chunk-006.txt  chunk-007.txt  chunk-008.txt  chunk-008a.txt  chunk-009.txt  chunk-010.txt  chunk-011.txt  chunk-011a.txt  chunk-011b.txt  chunk-012a.txt  chunk-012b.txt  chunk-013a.txt  chunk-013b.txt  chunk-014a.txt  chunk-014b.txt  chunk-015.txt
app/: audit.py  config.py  db.py  legal.py  local_launcher.py  local_runtime.py  local_schema.py  main.py  models.py  schemas.py  security.py  version.py
builds/: finalization-runs.json  pages-enablement-attempt.json  publication-latest.json  release-dispatch.json  release-latest.json  windows-latest.json
deploy/: Caddyfile  staging.env.example
docs/: ACCEPTANCE_CRITERIA.md  (+56 more)
(+225 files in other folders)
